[project]
name = "langchain_agents"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dima_in_the_forest", email = "da.kutsev@gmail.com"},
]
dependencies = [
    "langchain",
    "openai>=1.6.1",
    "loguru>=0.7.2",
    "google-search-results>=2.4.2",
    "duckduckgo-search>=4.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
]
